Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-19497

Regression, part of the statusbar with the sizegrip is not redrawn properly

    XMLWordPrintable

Details

    Description

      I am pretty sure, that this is a regression.
      In this example I used the servman binary to demonstrate the bug, but it does affect some other applications as well, which have that sizegrip, but have no other parts within the statusbar, which may enforce redraws explicitly (on their own?).
      I am sure, that the bug is not within servman, but maybe either in Win32SS or (maybe comctl32)
      BISECT_NEEDED

      Observed result
      0.4.15-dev-7842-g558ab78_drawingDirtInStatusbar.webm
      0.4.15-dev-7842-g558ab78_drawingDirtInStatusbar.log the log shows nothing while it misbehvaes like that

      Attachments

        Issue Links

          Activity

            People

              I_Kill_Bugs I_Kill_Bugs
              reactosfanboy reactosfanboy
              Votes:
              2 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: