[0.4.13][COMCTL32] status.c sizegrip-backports 2024-04-15

This ports back:

0.4.15-dev-7861-g a771729e696827e3696699522e63548fecee9550 [COMCTL32] Fix Status Bar Updating (#6696)
which fixes CORE-19497 'Regression, part of the statusbar with the sizegrip is not redrawn properly'
which regressed on this branch by 0.4.13-release-155-g 29ffdb871562027c50a30598603f5bf8e9dd9b3c

To compensate binary increase, I stripped a few TRACE's and the debugstr_t() function in the older branches.
comctl32.dll binary therefore has a tendency to shrink a tiny bit on most branches:
comctl32.dll master    RosBEWin2.2.2 GCC8.4.0dbg               2.001.408 (0.4.15-dev-7906-g1b85a5f)
comctl32.dll 0.4.14rls RosBEWin2.2.1 GCC8.4.0dbg  1.998.336 -> 1.997.824
comctl32.dll 0.4.14rls RosBEWin2.1.6 GCC4.7.2dbg  1.807.872 -> 1.807.360
comctl32.dll 0.4.13rls RosBEWin2.1.6 GCC4.7.2dbg  1.804.800 -> 1.803.264
comctl32.dll 0.4.12rls RosBEWin2.1.6 GCC4.7.2dbg  1.817.600 -> 1.817.088
comctl32.dll 0.4.11rls RosBEWin2.1.6 GCC4.7.2dbg  1.809.920 -> 1.809.408
comctl32.dll 0.4.10rls RosBEWin2.1.6 GCC4.7.2dbg  1.806.848 -> 1.806.848
comctl32.dll 0.4. 9rls RosBEWin2.1.6 GCC4.7.2dbg  1.806.848 -> 1.806.848
comctl32.dll 0.4. 8rls RosBEWin2.1.6 GCC4.7.2dbg  1.633.792 -> 1.632.768
comctl32.dll 0.4. 7rls RosBEWin2.1.6 GCC4.7.2dbg  1.602.048 -> 1.602.048